snapshots/syntax/library/functions/resources/loadpicture/loadpicture_property_assignment.snap
---
source: src/syntax/library/functions/resources/loadpicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: MyForm
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Picture
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: LoadPicture
        - kind: LeftParenthesis
          text: (
        - kind: StringLiteral
          text: "\"background.bmp\""
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
